# cpp-labs-2022

./: README.md
lab1/: CMakeLists.txt  LinkedHashSet.cpp  LinkedHashSet.h  Main.cpp  Tests.cpp  main.cpp
lab2/: CMakeLists.txt  Commands.cpp  Commands.h  Data.cpp  Data.h  Interpreter.cpp  Interpreter.h  InterpreterError.h  Main.cpp  Parser.cpp  Parser.h  Tests.cpp
